--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,7 +1,8 @@
 rootProject.name = 'DemoAppSoTay'
+include ':react-native-image-crop-picker'
+project(':react-native-image-crop-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-crop-picker/android')
 include ':react-native-picker-module'
 project(':react-native-picker-module').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-picker-module/android')
 include ':react-native-gesture-handler'
 project(':react-native-gesture-handler').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gesture-handler/android')
-
 include ':app'
