--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,6 +100,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    
+    packagingOptions {
+		exclude 'META-INF/mimetypes.default'
+		exclude 'META-INF/mailcap.default'
+	}
 
     defaultConfig {
         applicationId "com.demoappsotay"
@@ -139,6 +144,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-smtp-mailer')
     implementation project(':react-native-image-crop-picker')
     implementation project(':react-native-picker-module')
     implementation project(':react-native-gesture-handler')
