--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-image-crop-picker": "^0.24.0",
     "react-native-picker-module": "^0.1.2",
     "react-native-simple-radio-button": "^2.7.3",
+    "react-native-smtp-mailer": "^1.1.10",
     "react-native-table-component": "^1.2.0",
     "react-navigation": "^3.6.0"
   },
